# python-template

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  README.rst  bootstrap.sh  pyproject.toml
.github/workflows/: ci.yml  pre-commit.yaml  test-release-candidate.yaml  test.yaml
src/project_name/: __init__.py  app.py
tests/: test_app.py
