[project]
name = "project_name"
version = "0.1.0"
description = "Short project description here."
readme = "README.md"
license = {text = "MIT"}
authors = [
    { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.13"

# Project dependencies
dependencies = []

optional-dependencies = {}

[project.scripts]
# "project-name-cli" = "project_name.cli:main"

[build-system]
requires = ["setuptools>=80.7.1", "wheel>=0.45.1"]
build-backend = "setuptools.build_meta"

[tool.uv]

[dependency-groups]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
    "types-python-dateutil",
]

[tool.ruff]
fix = true
preview = true

[tool.ruff.lint]
select = ["ALL"]

[tool.mypy]
python_version = "3.13"
strict = true

[tool.pytest.ini_options]
addopts = "--strict-markers --cov=project_name --cov-report=term-missing --cov-fail-under=100"
